pop up vertical aligning is fixed

--- a/demos/uni/uni_new/css/user-page-new.css
+++ b/demos/uni/uni_new/css/user-page-new.css
@@ -2060,7 +2060,7 @@ header {
   padding-right: 5px;
 }
 
-@media only screen and (max-height: 599px) {
+@media only screen and (max-height: 699px) {
   .pop-up.invite-friends .wrapper {
     transform: translateX(-50%);
     top: 15px;
